--- a/backend/api/src/main/resources/application.properties
+++ b/backend/api/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+logging.level.org.springframework.web=DEBUG
+# Set a custom log format with reduced spacing
+logging.pattern.console=%d{HH:mm:ss.SSS} %5p --- [%8.8t] %-40.40logger{39} : %m%n
