--- a/backend/api/src/main/resources/application.properties
+++ b/backend/api/src/main/resources/application.properties
@@ -1,11 +1,16 @@
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/library_db
 spring.datasource.username=root
-spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
-logging.level.org.springframework.web=DEBUG
 # Set a custom log format with reduced spacing
 logging.pattern.console=%d{HH:mm:ss.SSS} %5p --- [%8.8t] %-40.40logger{39} : %m%n
+# Set log level for DaoAuthenticationProvider to DEBUG
+logging.level.org.springframework.security.authentication.dao.DaoAuthenticationProvider=TRACE
+logging.level.org.springframework.security.authentication=TRACE
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=TRACE
+logging.level.library.backend.api.config.CustomAuthenticationEntryPoint = DEBUG
