added authorization tests for book creation

--- a/backend/api/build.gradle
+++ b/backend/api/build.gradle
@@ -41,7 +41,7 @@ test {
         showStackTraces true
 
         // Change to `true` for more verbose test output
-        showStandardStreams = true
+        showStandardStreams = false
 
     }
 }
