enabled cors for localhost:4200 (frontend)

--- a/backend/api/src/main/resources/application.properties
+++ b/backend/api/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+#server port 
+server.port=8081
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/library_db
 spring.datasource.username=root
@@ -13,4 +15,4 @@ logging.level.org.springframework.security.authentication.dao.DaoAuthenticationP
 logging.level.org.springframework.security.authentication=TRACE
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=TRACE
-logging.level.library.backend.api.config.CustomAuthenticationEntryPoint = DEBUG
+logging.level.library.backend.api.config.CustomAuthenticationEntryPoint=DEBUG
