--- a/backend/api/build.gradle
+++ b/backend/api/build.gradle
@@ -32,7 +32,8 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
 	runtimeOnly 'com.mysql:mysql-connector-j'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'com.h2database:h2:1.3.148'
 }
 
 tasks.named('test') {
@@ -50,7 +51,7 @@ test {
         showStackTraces true
 
         // Change to `true` for more verbose test output
-        showStandardStreams = false
+        showStandardStreams = true 
 
     }
 }
